@@ -41,6 +41,9 @@
 <p>2024-06-27  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>www/INSTALL-unix.rst: Add mention of --without-libzip.</p></li>
+<li><p>README.txt: Add a section for libzip.</p></li>
+<li><p>configure.ac: Add pkg-config support for libzip.</p></li>
 <li><p>coders/tiff.c (WriteTIFFImage): Report an error if input image
 is not valid.</p></li>
 <li><p>www/formats.rst: Add an entry for HRZ format.</p></li>
