@@ -344,6 +344,9 @@ directory (only one can be used for development)</p>
 <dt><kbd><span class="option">--without-ttf</span></kbd></dt>
 <dd><p>disable TrueType support</p>
 </dd>
+<dt><kbd><span class="option">--without-libzip</span></kbd></dt>
+<dd><p>disable libzip support</p>
+</dd>
 <dt><kbd><span class="option">--with-tcmalloc</span></kbd></dt>
 <dd><p>enable Google perftools tcmalloc (minimal) memory allocation
 library support</p>
